--- a/Python_Exercise_2.ipynb
+++ b/Python_Exercise_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Exercise 2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlB7WqA2N88Ye3eCmOF6vM",
+      "authorship_tag": "ABX9TyOWQx7L6gNiPyVvoZBvWcQN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,22 +312,51 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F2K_dxERyFgR",
-        "outputId": "26c68c29-6f72-476d-f272-405d4d3d5074"
+        "outputId": "e4ef38bc-611d-4810-f84b-a3aef70c0a60"
       },
       "source": [
+        "#Cross Computation\n",
         "A = np.array([2,3,4])\n",
         "B = np.array([1,7,1])\n",
         "\n",
         "output = np.cross(A,B)\n",
         "print(output)"
       ],
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[-25   2  11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYfYh7AQ0FIL",
+        "outputId": "6a8005a5-8a21-49a3-8b97-cdfa76795a18"
+      },
+      "source": [
+        "#Dot Computation\n",
+        "A = np.array([2,3])\n",
+        "B = np.array([1,7])\n",
+        "\n",
+        "dot = np.dot(A,B)\n",
+        "print(dot)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "23\n"
           ]
         }
       ]
