--- a/Python_Exercise_2.ipynb
+++ b/Python_Exercise_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Exercise 2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWQx7L6gNiPyVvoZBvWcQN",
+      "authorship_tag": "ABX9TyNKBaUGB/QjxqxSwZ8i2NB9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -315,7 +315,7 @@
         "outputId": "e4ef38bc-611d-4810-f84b-a3aef70c0a60"
       },
       "source": [
-        "#Cross Computation\n",
+        "#Cross Computation of A and B\n",
         "A = np.array([2,3,4])\n",
         "B = np.array([1,7,1])\n",
         "\n",
@@ -343,7 +343,7 @@
         "outputId": "6a8005a5-8a21-49a3-8b97-cdfa76795a18"
       },
       "source": [
-        "#Dot Computation\n",
+        "#Dot Computation of A and B\n",
         "A = np.array([2,3])\n",
         "B = np.array([1,7])\n",
         "\n",
