--- a/Python_Exercise_2.ipynb
+++ b/Python_Exercise_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Exercise 2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKBaUGB/QjxqxSwZ8i2NB9",
+      "authorship_tag": "ABX9TyNQ4KIlm/MGNj4oYukWUqZe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,6 +144,15 @@
       },
       "source": [
         "##Space##"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2_HFOVma27ox"
+      },
+      "source": [
+        "###Vector spaces are mathematical objects taht abstractly capture the geometry and algebra of linear equations###"
       ]
     },
     {
