--- a/Practical_Lab_Exam_1.ipynb
+++ b/Practical_Lab_Exam_1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Practical Lab Exam 1",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMR3uY74oXqAnYXRDzOBsV",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNItJuYjNhVfVKZHD4wLx3H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +68,7 @@
         "delta = np.array([5,3,-1])\n",
         "print(delta)\n",
         "print(\"\")\n",
+        "print(\"Data type: \",delta.dtype)\n",
         "print(\"Size: \",delta.size)\n",
         "print(\"Shape: \",delta.shape)\n",
         "print(\"Number of Dimension: \",delta.ndim)"
