--- a/Practical_Lab_Exam_1.ipynb
+++ b/Practical_Lab_Exam_1.ipynb
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2dTx6Gszmbrl",
-        "outputId": "94c729c3-6fd3-4748-cf30-ed8bbd52baaf"
+        "outputId": "4cdc484f-c690-4e57-b482-27e5135f7c34"
       },
       "source": [
         "import numpy as np\n",
@@ -73,7 +73,7 @@
         "print(\"Shape: \",delta.shape)\n",
         "print(\"Number of Dimension: \",delta.ndim)"
       ],
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,6 +93,7 @@
             "Problem 2\n",
             "[ 5  3 -1]\n",
             "\n",
+            "Data type:  int64\n",
             "Size:  3\n",
             "Shape:  (3,)\n",
             "Number of Dimension:  1\n"
