--- a/Practical_Lab_Exam_1.ipynb
+++ b/Practical_Lab_Exam_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Practical Lab Exam 1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNItJuYjNhVfVKZHD4wLx3H",
+      "authorship_tag": "ABX9TyO+UnCxdui9je097oYnhfgX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2dTx6Gszmbrl",
-        "outputId": "4cdc484f-c690-4e57-b482-27e5135f7c34"
+        "outputId": "c8cab0b4-8b3f-4eaf-d537-ad53c14bd998"
       },
       "source": [
         "import numpy as np\n",
@@ -62,18 +62,9 @@
         "print(b)\n",
         "print(\"\")\n",
         "c = 2*C\n",
-        "print(c)\n",
-        "print(\"\")\n",
-        "print(\"Problem 2\")\n",
-        "delta = np.array([5,3,-1])\n",
-        "print(delta)\n",
-        "print(\"\")\n",
-        "print(\"Data type: \",delta.dtype)\n",
-        "print(\"Size: \",delta.size)\n",
-        "print(\"Shape: \",delta.shape)\n",
-        "print(\"Number of Dimension: \",delta.ndim)"
+        "print(c)"
       ],
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,11 +79,37 @@
             "\n",
             "[[ 2  4  6]\n",
             " [ 8 10 12]\n",
-            " [14 16 18]]\n",
-            "\n",
+            " [14 16 18]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Sv7zTso5wDM",
+        "outputId": "b00b3cff-2a93-4908-a535-2057408f1f72"
+      },
+      "source": [
+        "print(\"Problem 2\")\n",
+        "delta = np.array([5,3,-1])\n",
+        "print(delta)\n",
+        "print(\"Data type: \",delta.dtype)\n",
+        "print(\"Size: \",delta.size)\n",
+        "print(\"Shape: \",delta.shape)\n",
+        "print(\"Number of Dimension: \",delta.ndim)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Problem 2\n",
             "[ 5  3 -1]\n",
-            "\n",
             "Data type:  int64\n",
             "Size:  3\n",
             "Shape:  (3,)\n",
@@ -100,6 +117,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nXSq2yJh5zaL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
