--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Prelim Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6LdQbx5umvCys5sHvOgTN",
+      "authorship_tag": "ABX9TyOSZBBvD7pRb34eKl20WLa1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "igb1GuaKg24e",
-        "outputId": "8dad6eb5-5613-476c-fa1b-aa2718c678b1"
+        "outputId": "9b06f766-e42a-45b5-8a74-1e6c5904e597"
       },
       "source": [
         "#Create a 4 x 4 matrix whose diagonal elements are all one (1's). \n",
@@ -53,10 +53,10 @@
         "\n",
         "C = np.full((4,4),1)\n",
         "print(C)\n",
-        "C2 = np.diagonal(C)\n",
-        "print(C2)"
+        "q1 = np.diagonal(C)\n",
+        "print(q1)"
       ],
-      "execution_count": 34,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,18 +87,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0CiNwkvBixVo",
-        "outputId": "e07b85aa-0e68-4a1d-86b5-e84f4e8b30bc"
+        "outputId": "8db512a8-30ef-434d-9de5-79b56e768ae6"
       },
       "source": [
         "#In relation to Question 1, show a solution that doubles all the values of each\n",
         "#element. Show your solutions using Python codes and do not forget to label\n",
         "#them on the Text Cell.\n",
         "\n",
-        "q2C = C*2\n",
+        "q2 = C*2\n",
         "print(\"Double the value (Multiply by 2) of C from Question 1\")\n",
-        "print(q2C)"
+        "print(q2)"
       ],
-      "execution_count": 35,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
