--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Prelim Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSZBBvD7pRb34eKl20WLa1",
+      "authorship_tag": "ABX9TyOu2ML6tYo6bjkZMVgLfiYX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "igb1GuaKg24e",
-        "outputId": "9b06f766-e42a-45b5-8a74-1e6c5904e597"
+        "outputId": "bae0457b-608c-4867-cb46-079c068747f8"
       },
       "source": [
         "#Create a 4 x 4 matrix whose diagonal elements are all one (1's). \n",
@@ -56,7 +56,7 @@
         "q1 = np.diagonal(C)\n",
         "print(q1)"
       ],
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,18 +87,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0CiNwkvBixVo",
-        "outputId": "8db512a8-30ef-434d-9de5-79b56e768ae6"
+        "outputId": "ec286a93-e950-4cc3-d51f-df984fd344ad"
       },
       "source": [
         "#In relation to Question 1, show a solution that doubles all the values of each\n",
         "#element. Show your solutions using Python codes and do not forget to label\n",
         "#them on the Text Cell.\n",
         "\n",
-        "q2 = C*2\n",
+        "q2_a = C*2\n",
+        "q2_b = q1*2\n",
         "print(\"Double the value (Multiply by 2) of C from Question 1\")\n",
-        "print(q2)"
+        "print(q2_a)\n",
+        "print(q2_b)"
       ],
-      "execution_count": 38,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +110,8 @@
             "[[2 2 2 2]\n",
             " [2 2 2 2]\n",
             " [2 2 2 2]\n",
-            " [2 2 2 2]]\n"
+            " [2 2 2 2]]\n",
+            "[2 2 2 2]\n"
           ]
         }
       ]
@@ -129,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jO8iEAj_jd7w",
-        "outputId": "8d300cc8-1c2a-43eb-cfcd-549ec897a79d"
+        "outputId": "4383c82f-776d-477e-a50b-557f7b72f882"
       },
       "source": [
         "#Find the cross-product of matrices, A = [2,7,4] and B = [3,9,8]. \n",
@@ -144,7 +147,7 @@
         "q3 = np.cross(A,B)\n",
         "print(q3)"
       ],
-      "execution_count": 37,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
