--- a/Matrix_Algebra.ipynb
+++ b/Matrix_Algebra.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Matrix Algebra",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpaVkCOwLgnQZ3p/hEwlW4",
+      "authorship_tag": "ABX9TyN53gH1P8Mgp4BRf9M0j7y0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,7 +139,7 @@
         "id": "18JofQThxo2T"
       },
       "source": [
-        "##Python program to Inverse 3x3 Matrix A = ()"
+        "##Python program to Inverse 3x3"
       ],
       "execution_count": null,
       "outputs": []
@@ -237,6 +237,78 @@
             "[[ 1.00000000e+00  0.00000000e+00  2.77555756e-17]\n",
             " [-1.38777878e-17  1.00000000e+00  1.38777878e-17]\n",
             " [-4.16333634e-17  1.38777878e-16  1.00000000e+00]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ab1dJksO-Qzy"
+      },
+      "source": [
+        "## Coding Activity 3 "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kr_sJHZi-U7f"
+      },
+      "source": [
+        "Create a Python Program to inverse and transpose a 4x4 matrix,\n",
+        "A = ( [6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7] )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eHfoCyLK-TDx",
+        "outputId": "1632359f-9c34-4901-f9fd-420b18f26fb7"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "A = np.array([[6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7]])\n",
+        "invA = np.linalg.inv(A)\n",
+        "tranA = np.transpose(A)\n",
+        "invTranA = np.transpose(np.linalg.inv(A))\n",
+        "\n",
+        "print(\"Inverse\")\n",
+        "print(invA)\n",
+        "print()\n",
+        "print(\"Transpose\")\n",
+        "print(tranA)\n",
+        "print()\n",
+        "print(\"Inverse then Transpose\")\n",
+        "print(invTranA)\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inverse\n",
+            "[[ 0.13368984  0.10695187  0.02139037 -0.09090909]\n",
+            " [-0.00229183  0.02673797  0.14820474 -0.12987013]\n",
+            " [-0.12987013  0.18181818  0.06493506 -0.02597403]\n",
+            " [ 0.11000764 -0.28342246 -0.11382735  0.23376623]]\n",
+            "\n",
+            "Transpose\n",
+            "[[ 6  4  2  3]\n",
+            " [ 1 -2  8  1]\n",
+            " [ 1  5  7  9]\n",
+            " [ 3  1  6  7]]\n",
+            "\n",
+            "Inverse then Transpose\n",
+            "[[ 0.13368984 -0.00229183 -0.12987013  0.11000764]\n",
+            " [ 0.10695187  0.02673797  0.18181818 -0.28342246]\n",
+            " [ 0.02139037  0.14820474  0.06493506 -0.11382735]\n",
+            " [-0.09090909 -0.12987013 -0.02597403  0.23376623]]\n"
           ]
         }
       ]
