--- a/Linear_Transformation.ipynb
+++ b/Linear_Transformation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Linear Transformation",
       "provenance": [],
-      "authorship_tag": "ABX9TyNaqWzGk5Edhb4MeE+S3QeC",
+      "authorship_tag": "ABX9TyPfBPul1EfEtu80Cp4s1Xsf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "inv_A = np.linalg.inv(A)\n",
         "print(inv_A)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
         "X = np.linalg.inv(A).dot(B)\n",
         "print(X)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "X = np.dot(inv_A,B)\n",
         "print(X)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XQTwxzn5MDKz",
-        "outputId": "22a6407a-6210-4875-ee46-1a9d53d8a2cb"
+        "outputId": "ced2d544-5204-49e9-c4f4-10ae478de1d1"
       },
       "source": [
         "A2 = np.array([[20,10], [17,22]])\n",
@@ -129,9 +129,11 @@
         "print(B2)\n",
         "print()\n",
         "X2 = np.linalg.inv(A2).dot(B2)\n",
-        "print(X2)"
+        "print(X2)\n",
+        "print()\n",
+        "print(np.dot(A2,X2))"
       ],
-      "execution_count": 19,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +146,10 @@
             " [500]]\n",
             "\n",
             "[[10.]\n",
-            " [15.]]\n"
+            " [15.]]\n",
+            "\n",
+            "[[350.]\n",
+            " [500.]]\n"
           ]
         }
       ]
@@ -156,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlbmEV39HcXV",
-        "outputId": "ff83a75d-54bd-4a1d-efad-0b09a4132a0c"
+        "outputId": "74ce0be8-9336-4571-803b-867f2c1fb014"
       },
       "source": [
         "A1 = np.array([[4,3,2], [-2,2,3], [3,-5,2]])\n",
@@ -166,9 +171,11 @@
         "print(B1)\n",
         "print()\n",
         "X1 = np.linalg.inv(A1).dot(B1)\n",
-        "print(X1)"
+        "print(X1)\n",
+        "print()\n",
+        "print(np.dot(A1,X1))"
       ],
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +191,11 @@
             "\n",
             "[[ 5.]\n",
             " [ 3.]\n",
-            " [-2.]]\n"
+            " [-2.]]\n",
+            "\n",
+            "[[ 25.]\n",
+            " [-10.]\n",
+            " [ -4.]]\n"
           ]
         }
       ]
