--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJmCTbSQ/MnvW7h+S2heTu",
+      "authorship_tag": "ABX9TyOu31fBaNjnPBA7yPds7zEb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rd3eAJui2sXJ",
-        "outputId": "f03069bc-0920-4f3f-ec99-16eda67d778a"
+        "outputId": "2c2b102e-e9e0-4f3f-b75c-2f0d77bad535"
       },
       "source": [
         "# Question 1. Create a Python code that displays a square matrix whose length\n",
@@ -42,20 +42,20 @@
         "\n",
         "import numpy as np\n",
         "\n",
-        "q1 = np.zeros((5,5))\n",
-        "print(q1)"
+        "q1 = np.full((5,5), 1)\n",
+        "print(q1)\n"
       ],
-      "execution_count": 1,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0.]]\n"
+            "[[1 1 1 1 1]\n",
+            " [1 1 1 1 1]\n",
+            " [1 1 1 1 1]\n",
+            " [1 1 1 1 1]\n",
+            " [1 1 1 1 1]]\n"
           ]
         }
       ]
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OgMWSKTE5AMg",
-        "outputId": "ca1e95f1-6792-47d4-a4b2-e0e1da18a56d"
+        "outputId": "92cc5a28-7892-479f-ce35-2b9727484c52"
       },
       "source": [
         "# Question 2. Create a Python code that displays a square matrix whose elements\n",
@@ -76,7 +76,7 @@
         "q2 = np.array([[1,2,3,4,5],[0,6,7,8,9],[0,0,10,11,12],[0,0,0,13,14],[0,0,0,0,15]])\n",
         "print(q2)"
       ],
-      "execution_count": 7,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,16 +98,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tUdRAtoG6mUo",
-        "outputId": "f61827ef-37d7-4270-9103-826bdd0f5e05"
+        "outputId": "29da92c3-6aa7-4f96-c951-c8c019302474"
       },
       "source": [
         "# Question 3. Create a Python code that displays a square matrix which is\n",
         "# symmetrical (10 points)\n",
         "\n",
-        "q3 = np.array([[1,2,3],[2,4,5],[3,5,8]])\n",
-        "print(q3)"
+        "q3_a = np.array([[1,2,3],[2,4,5],[3,5,8]])\n",
+        "q3_b = np.array([[1,2,3],[2,4,5],[3,2,1]])\n",
+        "print(q3_a)\n",
+        "print('or')\n",
+        "print(q3_b)"
       ],
-      "execution_count": 15,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +118,11 @@
           "text": [
             "[[1 2 3]\n",
             " [2 4 5]\n",
-            " [3 5 8]]\n"
+            " [3 5 8]]\n",
+            "or\n",
+            "[[1 2 3]\n",
+            " [2 4 5]\n",
+            " [3 2 1]]\n"
           ]
         }
       ]
@@ -127,7 +134,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "69KpmfhA8NmT",
-        "outputId": "8c606c14-9d8b-425c-df15-96c9681eed6c"
+        "outputId": "64e3b906-a82d-4da5-c380-9d550127ac43"
       },
       "source": [
         "# Question 4. What is the inverse of matrix C? Show your solution by python \n",
@@ -139,7 +146,7 @@
         "print()\n",
         "print(q4)"
       ],
-      "execution_count": 13,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ihh35hKi9Enm",
-        "outputId": "4c2d983a-1d9b-4abd-9c0c-7f902d143727"
+        "outputId": "4ced490a-ec8c-4bc6-ef16-fbaad74587d4"
       },
       "source": [
         "# What is the determinant of the given matrix in Question 4? Show your solution\n",
@@ -172,7 +179,7 @@
         "print(q4_a)\n",
         "print(round(np.linalg.det(q4_a)))"
       ],
-      "execution_count": 17,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HpR5rjjk9Vxu",
-        "outputId": "957be20f-94d2-469e-ae35-1e73202e42cc"
+        "outputId": "994a4d71-cd9a-4b64-cb14-879cfe01e590"
       },
       "source": [
         "# Question 6. Find the roots of the linear equations by showing its python codes\n",
@@ -220,7 +227,7 @@
         "print('10X1 + 9X2 + 4X3 =',(10*q6[0])+(9*q6[1])+(4*q6[2]))\n",
         "print('10X1 + 13X2 + 15X3 =',(10*q6[0])+(13*q6[1])+(15*q6[2]))"
       ],
-      "execution_count": 27,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
