--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyOu31fBaNjnPBA7yPds7zEb",
+      "authorship_tag": "ABX9TyPXgKWpPT0U32ASZaLZc6/K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,16 +170,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ihh35hKi9Enm",
-        "outputId": "4ced490a-ec8c-4bc6-ef16-fbaad74587d4"
+        "outputId": "1de210ea-9fd5-4a27-af68-ba6bdf9967d1"
       },
       "source": [
-        "# What is the determinant of the given matrix in Question 4? Show your solution\n",
-        "# by python coding. (20 points)\n",
+        "# Question 5. What is the determinant of the given matrix in Question 4? Show \n",
+        "# your solution by python coding. (20 points)\n",
         "\n",
         "print(q4_a)\n",
         "print(round(np.linalg.det(q4_a)))"
       ],
-      "execution_count": 37,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
