--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXgKWpPT0U32ASZaLZc6/K",
+      "authorship_tag": "ABX9TyM3PkLRr770v3piWSV4SntD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HpR5rjjk9Vxu",
-        "outputId": "994a4d71-cd9a-4b64-cb14-879cfe01e590"
+        "outputId": "8dbdff84-3a94-4623-e371-f5415a148529"
       },
       "source": [
         "# Question 6. Find the roots of the linear equations by showing its python codes\n",
@@ -223,11 +223,13 @@
         "print(q6)\n",
         "print()\n",
         "print('proof')\n",
+        "print('X1 =',q6[0], 'X2 =',q6[1], 'X3 =',q6[2])\n",
+        "print()\n",
         "print('5X1 + 4X2 + X3 =',(5*q6[0])+(4*q6[1])+(q6[2]))\n",
         "print('10X1 + 9X2 + 4X3 =',(10*q6[0])+(9*q6[1])+(4*q6[2]))\n",
         "print('10X1 + 13X2 + 15X3 =',(10*q6[0])+(13*q6[1])+(15*q6[2]))"
       ],
-      "execution_count": 39,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,6 +252,8 @@
             " [0.8]]\n",
             "\n",
             "proof\n",
+            "X1 = [0.2] X2 = [0.4] X3 = [0.8]\n",
+            "\n",
             "5X1 + 4X2 + X3 = [3.4]\n",
             "10X1 + 9X2 + 4X3 = [8.8]\n",
             "10X1 + 13X2 + 15X3 = [19.2]\n"
