--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyM3PkLRr770v3piWSV4SntD",
+      "authorship_tag": "ABX9TyP8Zss+O7mVYJwdY09OdCb/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CustodioJustin/Linear-Algebra-58019/blob/main/Midterm_Exam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n0SPmQ5tGlAq"
+      },
+      "source": [
+        "## Question 1"
       ]
     },
     {
@@ -61,6 +70,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qGdxUsC9GpZf"
+      },
+      "source": [
+        "## Question 2"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -89,6 +107,15 @@
             " [ 0  0  0  0 15]]\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3XkOcQmbGqk7"
+      },
+      "source": [
+        "## Question 3"
       ]
     },
     {
@@ -128,6 +155,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YyDRnnxlGrqP"
+      },
+      "source": [
+        "## Question 4"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -164,6 +200,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mvgp-w59GsoX"
+      },
+      "source": [
+        "## Question 5"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -191,6 +236,15 @@
             "5\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tCNTonCVGt4P"
+      },
+      "source": [
+        "## Question 6"
       ]
     },
     {
