--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8Zss+O7mVYJwdY09OdCb/",
+      "authorship_tag": "ABX9TyOXSF0yOe6CdLH3eDAmIw5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "q1 = np.full((5,5), 1)\n",
         "print(q1)\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
         "q2 = np.array([[1,2,3,4,5],[0,6,7,8,9],[0,0,10,11,12],[0,0,0,13,14],[0,0,0,0,15]])\n",
         "print(q2)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,31 +125,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tUdRAtoG6mUo",
-        "outputId": "29da92c3-6aa7-4f96-c951-c8c019302474"
+        "outputId": "fb2ab9cd-e0c7-45e5-e0c8-0eac90bf230d"
       },
       "source": [
         "# Question 3. Create a Python code that displays a square matrix which is\n",
         "# symmetrical (10 points)\n",
+        "# Edit, This code block didn't get updated\n",
         "\n",
-        "q3_a = np.array([[1,2,3],[2,4,5],[3,5,8]])\n",
-        "q3_b = np.array([[1,2,3],[2,4,5],[3,2,1]])\n",
+        "q3_a = np.array([[0,1,2],[3,4,5],[6,7,8]])\n",
+        "q3_b = np.transpose(q3_a)\n",
         "print(q3_a)\n",
-        "print('or')\n",
+        "print('symmetric transpose')\n",
         "print(q3_b)"
       ],
-      "execution_count": 45,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1 2 3]\n",
-            " [2 4 5]\n",
-            " [3 5 8]]\n",
-            "or\n",
-            "[[1 2 3]\n",
-            " [2 4 5]\n",
-            " [3 2 1]]\n"
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "symmetric transpose\n",
+            "[[0 3 6]\n",
+            " [1 4 7]\n",
+            " [2 5 8]]\n"
           ]
         }
       ]
@@ -182,7 +183,7 @@
         "print()\n",
         "print(q4)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +225,7 @@
         "print(q4_a)\n",
         "print(round(np.linalg.det(q4_a)))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +284,7 @@
         "print('10X1 + 9X2 + 4X3 =',(10*q6[0])+(9*q6[1])+(4*q6[2]))\n",
         "print('10X1 + 13X2 + 15X3 =',(10*q6[0])+(13*q6[1])+(15*q6[2]))"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
