--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Final Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRjtBgRHI2F1dH7j8fWj1X",
+      "authorship_tag": "ABX9TyMmQJlobIrCyyR+gCaEv8Ce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,35 +29,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 392
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-SCWIPpo_W7j",
-        "outputId": "37b7bc5f-445e-4bdb-e36e-aaa194683a94"
+        "outputId": "e0c68dbf-3b4f-48db-d176-30d02376a79f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-6  3  1]] \n",
-            " [[89]] \n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-32-8d5fa42fae21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mans2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/basic.py\u001b[0m in \u001b[0;36msolve\u001b[0;34m(a, b, sym_pos, lower, overwrite_a, overwrite_b, debug, check_finite, assume_a, transposed)\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Input a needs to be a square matrix.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mb1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Input a needs to be a square matrix."
+            "[[13.]\n",
+            " [57.]\n",
+            " [19.]]\n"
           ]
         }
       ],
@@ -71,11 +58,10 @@
         "\n",
         "# -6A+3B+C = 89\n",
         "\n",
-        "A = np.array([[-6,3,1]])\n",
-        "B = np.array([[89]])\n",
-        "\n",
-        "print(A, '\\n', B, '\\n')\n",
-        "ans2 = solve(A, B)\n"
+        "A = np.array([[1,1,1],[1,0,4],[0,0,5]])\n",
+        "B = np.array([[89],[89],[95]])\n",
+        "amount = np.linalg.inv(A).dot(B)\n",
+        "print(amount)\n"
       ]
     },
     {
@@ -92,22 +78,19 @@
         "#ans2 = solve(A1, B1)\n",
         "#print(ans2, '\\n')\n",
         "\n",
-        "X = -10 \n",
-        "Y = 15 \n",
-        "Z = -5\n",
-        "\n",
-        "print(3*X - 1*Y + Z)\n",
-        "print(9*X - 3*Y + 3*Z)\n",
-        "print(-12*X + 4*Y - 4*Z)"
+        "print(' ERROR: LinAlgError: Singular Matrix')\n",
+        "print(' This problem gives an error mainly because ')\n",
+        "print(' It gives a determinant of 0 therefor ')\n",
+        "print(' Inverse of the matrix does not exist ')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eK8ul0oXGxVe",
-        "outputId": "8a6774d1-6584-43c3-d0e3-0a0248faa8a8"
+        "outputId": "9e694c8d-bd02-4ef9-ff70-8b9a95ccb508"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,9 +104,10 @@
             " [ 15]\n",
             " [-20]] \n",
             "\n",
-            "-9.5\n",
-            "-28.5\n",
-            "38.0\n"
+            " ERROR: LinAlgError: Singular Matrix\n",
+            " This problem gives an error mainly because \n",
+            " It gives a determinant of 0 therefor \n",
+            " Inverse of the matrix does not exist \n"
           ]
         }
       ]
@@ -151,7 +135,7 @@
         "id": "G7aXS9QkKldy",
         "outputId": "64f97f5b-d9b0-451b-e5a7-ce8394e9ee71"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
