--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Final Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmQJlobIrCyyR+gCaEv8Ce",
+      "authorship_tag": "ABX9TyPgs1E+ybx5tMZWI8B0XbCY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,6 +155,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ma'am ngayon lang po ako naka send sa github dahil nag blackout po sa lancaster\n",
+        "at 30 mins after lang bumalik.  Nawalan po kami ng kuryente at around 3:25"
+      ],
+      "metadata": {
+        "id": "m8T_nNPAdHrY"
+      }
     }
   ]
 }
